php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #22330 Overloaded strrpos() gives wrong results
Submitted: 2003-02-20 06:28 UTC Modified: 2003-02-20 11:55 UTC
From: david at santinoli dot com Assigned:
Status: Closed Package: mbstring related
PHP Version: 4.3.1 OS: Linux
Private report: No CVE-ID: None
 [2003-02-20 06:28 UTC] david at santinoli dot com
With

 php_value mbstring.internal_encoding "UTF-8"
 php_value mbstring.func_overload 6

in my php.ini, the overloaded strrpos() gives a wrong result when parsing an UTF-8 string.
For example,

 $s=iconv("ISO-8859-1","UTF-8","?.jpg");
 $x=strrpos($s,".");

assigns the value 2 to $x, instead of the correct one (1).

My PHP was configured with
./configure  --with-config-file-path=/etc/httpd/conf --with-apxs --with-pgsql 
--with-iconv --enable-mbstring --enable-mbregex

A patch which fixes this bug can be found at
http://village.flashnet.it/users/mi1802/php-4.3.1-mbstring.diff

Cheers,
 David

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-02-20 11:55 UTC] moriyoshi@php.net
Your patch has just been committed to CVS.
Thanks for the report!

Moriyoshi



 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 30 05:00:02 2026 UTC