MFH(r1.165): Fixed bug #22330 (overloaded strrpos() weirdness)